[package]
name = "atlas"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "atlas"
path = "src/main.rs"

[[example]]
name = "tile_loader_demo"
path = "examples/tile_loader_demo.rs"

[[example]]
name = "test_cache_populate"
path = "examples/test_cache_populate.rs"

[[example]]
name = "test_zoom4_cache"
path = "examples/test_zoom4_cache.rs"

[[example]]
name = "cache_checker"
path = "examples/cache_checker.rs"

[[example]]
name = "create_test_cache"
path = "examples/create_test_cache.rs"

[[example]]
name = "test_complete_cache"
path = "examples/test_complete_cache.rs"


[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "25.0"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"

# Optional networking dependencies (not available in WASM)
tokio = { version = "1.0", features = ["full"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
image = { version = "0.25", features = ["png", "jpeg"] }
geojson = "0.24.2"
earcutr = "0.5.0"
spade = "2.15.0"
delaunator = "1.0.2"
d3_geo_voronoi_rs = "0.10.7"
geo-types = "0.7.17"
geo = "0.30.0"
rand = "0.9.2"
mpsc = "0.2.6"

[features]
default = ["networking"]
networking = ["tokio", "reqwest"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "25.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
 
[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
